<resources>
    <string name="app_name">Ventanapp</string>
    <string name="prefs_file">com.oplinf.ventanasapp.PREFERENCE_FILE_KEY</string>
    <string name="registrar">Registrar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="acceder">Acceder</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="user">User</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="google">Google</string>


<!--        <string name="default_web_client_id" translatable="false">1065916454480-kp2b8996ifbbgdbd2to0ph4vqans69qg.apps.googleusercontent.com</string>-->
    <string name="facebook">Facebook</string>
    <string name="facebook_app_id">1087328908705562</string>
    <string name="fb_login_protocol_scheme">fb1087328908705562</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="ingrese_el_alto">Ingrese el Alto</string>
    <string name="ingrese_el_ancho">Ingrese el Ancho</string>

</resources>