<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyss"
    tools:context=".AuthActivity">

    <LinearLayout
        android:id="@+id/authLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:background="@color/darckss"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_corredera_white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/emailet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

        <EditText
            android:id="@+id/passwordet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signUpBotton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#0097DC"
            android:text="@string/registrar"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#46B64A"
            android:text="@string/acceder"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/googleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_google"
            android:paddingLeft="16dp"
            android:text="@string/google"
            android:textAlignment="textStart"
            android:textColor="@color/darckss"
            android:textStyle="bold" />

<!--        <Space-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="5dp" />-->

<!--        <Button-->
<!--            android:id="@+id/facebookButton"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTint="@color/white"-->
<!--            android:drawableLeft="@drawable/ic_facebook"-->
<!--            android:paddingLeft="16dp"-->
<!--            android:text="@string/facebook"-->
<!--            android:textAlignment="textStart"-->
<!--            android:textColor="@color/darckss"-->
<!--            android:textStyle="bold" />-->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>